--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
         "symfony/asset": "~2.8|3.0.*",
         "symfony/browser-kit": "~2.8|3.0.*",
         "symfony/class-loader": "~2.8|3.0.*",
-        "symfony/config": "~2.8|3.0.*",
+        "symfony/config": "^3.2",
         "symfony/console": "~2.8|3.0.*",
         "symfony/css-selector": "~2.8|3.0.*",
         "symfony/debug": "~2.8|3.0.*",
         "symfony/finder": "~2.8|3.0.*",
-        "symfony/form": "~2.8|3.0.*",
+        "symfony/form": "^3.2",
         "symfony/monolog-bridge": "~2.8|3.0.*",
         "symfony/process": "~2.8|3.0.*",
         "symfony/security": "~2.8|3.0.*",
-        "symfony/translation": "~2.8|3.0.*",
-        "symfony/twig-bridge": "~3.2",
-        "symfony/validator": "~2.8|3.0.*",
+        "symfony/translation": "^3.2",
+        "symfony/twig-bridge": "^3.2",
+        "symfony/validator": "^3.2",
         "ramsey/uuid": "^3.4"
     },
     "autoload": {
