Add createdOn and updatedON

--- a/src/Slx/Infrastructure/Persistence/Doctrine/Mapping/Entity/User.User.orm.yml
+++ b/src/Slx/Infrastructure/Persistence/Doctrine/Mapping/Entity/User.User.orm.yml
@@ -20,3 +20,9 @@ Slx\Domain\Entity\User\User:
       column: userName
       type: string
       nullable: false
+    createdOn:
+      type: datetime
+      nullable: false
+    updatedOn:
+      type: datetime
+      nullable: false
