--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,54 @@
 {
-    "name": "fabpot/silex-skeleton",
-    "description": "A pre-configured skeleton for the Silex microframework",
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": ">=5.5.9",
-        "silex/silex": "~2.0",
-        "silex/web-profiler": "~2.0",
-        "symfony/asset": "~2.8|3.0.*",
-        "symfony/browser-kit": "~2.8|3.0.*",
-        "symfony/class-loader": "~2.8|3.0.*",
-        "symfony/config": "^3.2",
-        "symfony/console": "~2.8|3.0.*",
-        "symfony/css-selector": "~2.8|3.0.*",
-        "symfony/debug": "~2.8|3.0.*",
-        "symfony/finder": "~2.8|3.0.*",
-        "symfony/form": "^3.2",
-        "symfony/monolog-bridge": "~2.8|3.0.*",
-        "symfony/process": "~2.8|3.0.*",
-        "symfony/security": "~2.8|3.0.*",
-        "symfony/translation": "^3.2",
-        "symfony/twig-bridge": "^3.2",
-        "symfony/validator": "^3.2",
-        "ramsey/uuid": "^3.4",
-        "symfony/yaml": "^3.2",
-        "doctrine/orm": "^2.0",
-        "dflydev/doctrine-orm-service-provider": "2.0.1",
-        "monolog/monolog": "^1.22",
-        "phpmailer/phpmailer": "^5.2",
-        "df/silex-yaml-config-provider": "dev-master"
+  "name": "fabpot/silex-skeleton",
+  "description": "A pre-configured skeleton for the Silex microframework",
+  "license": "MIT",
+  "type": "project",
+  "require": {
+    "php": ">=5.5.9",
+    "silex/silex": "~2.0",
+    "silex/web-profiler": "~2.0",
+    "symfony/asset": "~2.8|3.0.*",
+    "symfony/browser-kit": "~2.8|3.0.*",
+    "symfony/class-loader": "~2.8|3.0.*",
+    "symfony/config": "^3.2",
+    "symfony/console": "~2.8|3.0.*",
+    "symfony/css-selector": "~2.8|3.0.*",
+    "symfony/debug": "~2.8|3.0.*",
+    "symfony/finder": "~2.8|3.0.*",
+    "symfony/form": "^3.2",
+    "symfony/monolog-bridge": "~2.8|3.0.*",
+    "symfony/process": "~2.8|3.0.*",
+    "symfony/security": "~2.8|3.0.*",
+    "symfony/translation": "^3.2",
+    "symfony/twig-bridge": "^3.2",
+    "symfony/validator": "^3.2",
+    "ramsey/uuid": "^3.4",
+    "symfony/yaml": "^3.2",
+    "doctrine/orm": "^2.0",
+    "dflydev/doctrine-orm-service-provider": "2.0.1",
+    "monolog/monolog": "^1.22",
+    "phpmailer/phpmailer": "^5.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "": "src/"
     },
-    "autoload": {
-        "psr-0": { "": "src/" }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0.x-dev"
-        }
-    },
-    "scripts": {
-        "run": [
-            "echo 'Started web server on http://localhost:8888'",
-            "php -S localhost:8888 -t web"
-        ]
+    "psr-0": {
+      "Test\\": "tests/"
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0.x-dev"
+    }
+  },
+  "scripts": {
+    "run": [
+      "echo 'Started web server on http://localhost:8888'",
+      "php -S localhost:8888 -t web"
+    ]
+  }
 }
