Add task persistence

--- a/src/Slx/Infrastructure/Persistence/Doctrine/Mapping/Entity/User.User.orm.yml
+++ b/src/Slx/Infrastructure/Persistence/Doctrine/Mapping/Entity/User.User.orm.yml
@@ -13,8 +13,12 @@ Slx\Domain\Entity\User\User:
       class: Slx\Domain\ValueObject\Email\Email
       columnPrefix: false
     uid:
-      class: Slx\Domain\Entity\User\UserId
+      class: Slx\Domain\ValueObject\User\UserId
       columnPrefix: false
+  oneToMany:
+    tasks:
+      targetEntity: Slx\Domain\Entity\Task\Task
+      mappedBy: userAssigned
   fields:
     username:
       column: userName
