--- a/config/config.ini.dist
+++ b/config/config.ini.dist
@@ -1,7 +1,7 @@
 [database]
-driver = driver
+driver = pdo_mysql
 charset = utf8
-host = 127.0.0.1
+host = db
 dbname = dbname
 user = user
 password = user
